--- a/Chroma/manifest.json
+++ b/Chroma/manifest.json
@@ -9,8 +9,7 @@
     "dependsOn": {
       "BSIPA": "^3.12.20",
       "BS Utils": "^1.3.3",
-      "CustomUI": "^1.5.8",
-      "Harmony": "^1.2.1"
+      "CustomUI": "^1.5.8"
     },
     "features": []
   }
