--- a/Chroma/manifest.json
+++ b/Chroma/manifest.json
@@ -2,14 +2,14 @@
     "$schema": "./Schema.json",
     "author": "SkyKiwi",
     "description": "RGB Lightmapping, custom colours, and rainbow modes",
-    "gameVersion": "1.0.0",
+    "gameVersion": "1.6.0",
     "id": "chroma",
     "name": "Chroma",
-    "version": "1.3.2",
+    "version": "1.3.4",
     "dependsOn": {
-      "BSIPA": "^3.12.20",
-      "BS Utils": "^1.3.3",
-      "CustomUI": "^1.5.8"
+	  "BSIPA":"^3.13.4",
+      "BeatSaberMarkupLanguage": "^1.1.0",
+	  "BS Utils": "^1.3.0"
     },
     "features": []
   }
