--- a/Chroma/manifest.json
+++ b/Chroma/manifest.json
@@ -3,11 +3,10 @@
     "author": "SkyKiwi",
     "description": "RGB Lightmapping, custom colours, and rainbow modes",
     "gameVersion": "1.6.0",
-    "id": "chroma",
+    "id": "Chroma",
     "name": "Chroma",
-    "version": "1.3.5",
+    "version": "1.3.6",
     "dependsOn": {
-	  "BSIPA":"^3.13.4",
       "BeatSaberMarkupLanguage": "^1.1.0",
 	  "BS Utils": "^1.3.0"
     },
