--- a/Chroma/manifest.json
+++ b/Chroma/manifest.json
@@ -8,7 +8,8 @@
     "version": "1.3.6",
     "dependsOn": {
       "BeatSaberMarkupLanguage": "^1.1.0",
-	  "BS Utils": "^1.3.0"
+	  "BS Utils": "^1.3.0",
+	  "CustomJSONData": "^0.0.3"
     },
     "features": []
   }
