Fixed a bunch of settings in Aesthetics category and deleted whatever worthless code i found

--- a/Chroma/Chroma.csproj
+++ b/Chroma/Chroma.csproj
@@ -58,6 +58,7 @@
     <Compile Include="ChromaTesting.cs" />
     <Compile Include="Extensions\LightSwitchEventEffectExtensions.cs" />
     <Compile Include="Extensions\TubeBloomPrePassLightExtensions.cs" />
+    <Compile Include="HarmonyPatches\MenuLightsManagerSetColorsFromPreset.cs" />
     <Compile Include="HarmonyPatches\BeatmapDataLoaderGetBeatmapDataFromJson.cs" />
     <Compile Include="HarmonyPatches\BeatDataTransformHelperCreateTransformedBeatmapData.cs" />
     <Compile Include="HarmonyPatches\LightPairRotationEventEffectUpdateRotationData.cs" />
