--- a/Chroma/Chroma.csproj
+++ b/Chroma/Chroma.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Beatmap\CustomBeatmapBomb.cs" />
     <Compile Include="Beatmap\CustomBeatmapNote.cs" />
     <Compile Include="Beatmap\CustomBeatmapObject.cs" />
+    <Compile Include="Beatmap\Events\ChromaBombColourEvent.cs" />
     <Compile Include="Beatmap\Events\ChromaObstacleColourEvent.cs" />
     <Compile Include="Beatmap\Events\LegacyEvents\ChromaRotateEvent.cs" />
     <Compile Include="Beatmap\Events\ChromaNoteScaleEvent.cs" />
