--- a/Chroma/manifest.json
+++ b/Chroma/manifest.json
@@ -8,8 +8,7 @@
     "version": "1.3.6",
     "dependsOn": {
       "BeatSaberMarkupLanguage": "^1.1.0",
-	  "BS Utils": "^1.3.0",
-	  "CustomJSONData": "^0.0.3"
+	  "BS Utils": "^1.3.0"
     },
     "features": []
   }
