--- a/Chroma/Chroma.csproj
+++ b/Chroma/Chroma.csproj
@@ -54,28 +54,17 @@
     <Compile Include="Extensions\LightSwitchEventEffectExtensions.cs" />
     <Compile Include="Extensions\TubeBloomPrePassLightExtensions.cs" />
     <Compile Include="HarmonyPatches\ColorNoteVisuals.cs" />
-    <Compile Include="HarmonyPatches\ObstacleControllerInit.cs" />
-    <Compile Include="HarmonyPatches\MenuLightsManagerSetColorsFromPreset.cs" />
-    <Compile Include="HarmonyPatches\BeatmapDataLoaderGetBeatmapDataFromJson.cs" />
-    <Compile Include="HarmonyPatches\BeatDataTransformHelperCreateTransformedBeatmapData.cs" />
-    <Compile Include="HarmonyPatches\LightPairRotationEventEffectUpdateRotationData.cs" />
-    <Compile Include="HarmonyPatches\LightPairRotationEventEffectHandleBeatmapObjectCallbackControllerBeatmapEventDidTrigger.cs" />
-    <Compile Include="HarmonyPatches\ParticleSystemEventEffectHandleBeatmapObjectCallbackControllerBeatmapEventDidTrigger.cs" />
-    <Compile Include="HarmonyPatches\ParticleSystemEventEffectOnDestroy.cs" />
-    <Compile Include="HarmonyPatches\LightSwitchEventEffectSetColor.cs" />
-    <Compile Include="HarmonyPatches\LightSwitchEventEffectOnDestroy.cs" />
-    <Compile Include="HarmonyPatches\ParticleSystemEventEffectStart.cs" />
-    <Compile Include="HarmonyPatches\LightSwitchEventEffectStart.cs" />
-    <Compile Include="HarmonyPatches\ReleaseInfoViewControllerDidActivate.cs" />
-    <Compile Include="HarmonyPatches\ColorManagerColorForNoteType.cs" />
-    <Compile Include="HarmonyPatches\ColorManagerColorForSaberType.cs" />
-    <Compile Include="HarmonyPatches\ColorNoteVisualsHandleNoteControllerDidInitEvent.cs" />
-    <Compile Include="HarmonyPatches\LightSwitchEventEffectHandleBeatmapObjectCallbackControllerBeatmapEventDidTrigger.cs" />
-    <Compile Include="HarmonyPatches\NoteControllerInit.cs" />
-    <Compile Include="HarmonyPatches\NoteCutEffectSpawnerSpawnNoteCutEffect.cs" />
-    <Compile Include="HarmonyPatches\SaberWeaponTrailColor.cs" />
-    <Compile Include="HarmonyPatches\TrackLaneRingsRotationEffectSpawnerHandleBeatmapObjectCallbackControllerBeatmapEventDidTrigger.cs" />
-    <Compile Include="HarmonyPatches\VRPointerRefreshLaserPointerAndLaserHit.cs" />
+    <Compile Include="HarmonyPatches\ObstacleController.cs" />
+    <Compile Include="HarmonyPatches\MenuLightsManager.cs" />
+    <Compile Include="HarmonyPatches\LightPairRotationEventEffect.cs" />
+    <Compile Include="HarmonyPatches\ParticleSystemEventEffect.cs" />
+    <Compile Include="HarmonyPatches\ReleaseInfoViewController.cs" />
+    <Compile Include="HarmonyPatches\ColorManager.cs" />
+    <Compile Include="HarmonyPatches\LightSwitchEventEffect.cs" />
+    <Compile Include="HarmonyPatches\NoteController.cs" />
+    <Compile Include="HarmonyPatches\NoteCutEffectSpawner.cs" />
+    <Compile Include="HarmonyPatches\SaberWeaponTrail.cs" />
+    <Compile Include="HarmonyPatches\TrackLaneRingsRotationEffect.cs" />
     <Compile Include="IChromaExtension.cs" />
     <Compile Include="ChromaPlugin.cs" />
     <Compile Include="Misc\Greetings.cs" />
