--- a/Chroma/manifest.json
+++ b/Chroma/manifest.json
@@ -5,10 +5,11 @@
     "gameVersion": "1.7.0",
     "id": "Chroma",
     "name": "Chroma",
-    "version": "1.3.6",
+    "version": "1.4.0",
     "dependsOn": {
       "BeatSaberMarkupLanguage": "^1.1.0",
-	  "BS Utils": "^1.3.0"
+	  "BS Utils": "^1.3.0",
+	  "CustomJSONData": "^0.0.4"
     },
     "features": []
   }
