--- a/Chroma/manifest.json
+++ b/Chroma/manifest.json
@@ -7,9 +7,10 @@
     "name": "Chroma",
     "version": "1.4.0",
     "dependsOn": {
-      "BeatSaberMarkupLanguage": "^1.1.0",
+      "BeatSaberMarkupLanguage": "^1.1.3",
 	  "BS Utils": "^1.3.0",
-	  "CustomJSONData": "^0.0.4"
+	  "CustomJSONData": "^0.0.4",
+	  "CustomEvents": "^0.0.4"
     },
     "features": []
   }
